Fix margin-left property in temple.css for proper spacing

--- a/week2/styles/temple.css
+++ b/week2/styles/temple.css
@@ -51,7 +51,7 @@ section p{
 }
 
 ul{
-    margin-left: 10px 20px;
+    margin-left: 10 20px;
 }
 
 footer {
